--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=4.3.0",
     "google-genai>=1.39.1",
     "networkx>=3.5",
     "pydantic>=2.11.9",
