--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
 [project]
-name = "script-analyzer"
-version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
+name = "framework"
+version = "0.9.9"
+description = "Extensible framework for narrative analysis"
 requires-python = ">=3.12"
 dependencies = [
     "datasets>=4.3.0",
@@ -10,3 +9,10 @@ dependencies = [
     "networkx>=3.5",
     "pydantic>=2.11.9",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/framework"]
